# pywhitakers

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
pywhitakers/: __init__.py
pywhitakers.egg-info/: PKG-INFO  SOURCES.txt
