[project]
name = "pywhitakers"
version = "0.0.1"
description = ""
authors = ["Forrest <ForrestZengMusic@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "pywhitakers" }
]
dependencies = ["requests>=2.32.3","setuptools>=65.6.3","unidecode<=1.3.6","python>=3.9"]
dynamic = ["version"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
