[project]
name = "pywhitakers"
version = "0.0.13"
description = ""
authors = [{name = "Forrest Zeng", email = "ForrestZengMusic@gmail.com"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
packages = [
    { include = "pywhitakers" }
]
requires-python = ">=3.9"
dependencies = ["requests>=2.32.3","setuptools>=65.6.3","unidecode<=1.3.6"]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"